--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@ $purpleColor: #7e33e0;
 $grayColor: #f1f0ff;
 $pinkColor: #fb2e86;
 $blueColor: #1a0b5b;
+$greenColor: #08D15F;
 
 // Defaults
 *,
@@ -22,6 +23,7 @@ $blueColor: #1a0b5b;
 body {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 500;
+    line-height: 1.4;
 }
 
 .container {
@@ -205,6 +207,13 @@ header {
             position: absolute;
             z-index: 0;
         }
+        .discount {
+            position: absolute;
+            z-index: 12;
+            width: 100px;
+            top: 0;
+            right: 0;
+        }
         .couch {
             position: relative;
             z-index: 10;
@@ -215,16 +224,17 @@ header {
         position: absolute;
         top: 0;
         left: 0;
-        width: 250px;
+        width: 15%;
         display: none;
     }
     .hero-text {
         padding-bottom: 3em;
+        width: 100%;
     }
 }
 
 // Media query for header
-@media (min-width: 768px) {
+@media (min-width: 898px) {
     header {
         .flex {
             flex-direction: row;
@@ -237,6 +247,10 @@ header {
         }
         .lamp {
             display: block;
+        }
+        .hero-text {
+            width: 70%;
+            padding-left: 10%;
         }
     }
 }
@@ -266,7 +280,7 @@ header {
         height: 4px;
         margin: .5em 0;
     } #one {
-        background-color: green;
+        background-color: $greenColor;
     } #two {
         background-color: $pinkColor;
     } #three {
@@ -363,6 +377,34 @@ section.latest {
     }
 }
 
+// Shopex 
+section.shopex {
+    text-align: center;
+    h2 {
+        color: $blueColor;
+        padding: 2em 0;
+    }
+    img {
+        width: 50px;
+        padding: 2em 0;
+    }
+    .flex {
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .small-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 250px;
+        padding: 2em;
+        margin: 0  2em 2em 0;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    }
+}
 
 
 // Utilities
