--- a/css/main.css
+++ b/css/main.css
@@ -423,10 +423,7 @@ section.latest .flex-wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-section.latest .flex-wrapper * {
-  margin: .5em;
+  gap: 1em;
 }
 
 section.latest .flex-wrapper .text {
@@ -462,7 +459,7 @@ section.latest .flex-wrapper .text P {
 section.latest .thumbnail {
   background-color: #f1f0ff;
   padding: 2em;
-  width: 350px;
+  width: 270px;
   height: 250px;
 }
 
@@ -498,6 +495,7 @@ section.shopex .flex {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 1em;
 }
 
 section.shopex .small-card {
@@ -516,7 +514,6 @@ section.shopex .small-card {
           justify-content: center;
   width: 250px;
   padding: 2em;
-  margin: 0  2em 2em 0;
   -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
