--- a/css/main.scss
+++ b/css/main.scss
@@ -357,9 +357,7 @@ section.latest {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        * {
-            margin: .5em;
-        }
+        gap: 1em;
         .text {
             padding: 1em 0;
             display: flex;
@@ -382,7 +380,7 @@ section.latest {
     .thumbnail {
         background-color: $grayColor;
         padding: 2em;
-        width: 350px;
+        width: 270px;
         height: 250px;
         img {
             width: 70%;
@@ -409,6 +407,7 @@ section.shopex {
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        gap: 1em;
     }
 
     .small-card {
@@ -418,7 +417,6 @@ section.shopex {
         justify-content: center;
         width: 250px;
         padding: 2em;
-        margin: 0  2em 2em 0;
         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     }
 }
