Changed footer color

--- a/css/main.scss
+++ b/css/main.scss
@@ -910,7 +910,7 @@ footer {
     
 }
 section.footer {
-    background-color: #ccc;
+    background-color:#c9c8d4;
     font-size: 12px;
     .container {
         display: flex;
